# bazelstuff

./: BUILD  MODULE.bazel  REPO.bazel
external_deps/: MODULE.bazel
external_deps/cc/boost/: BUILD
external_deps/cc/crypto/: BUILD
external_deps/private/: BUILD  defs.bzl
external_deps/spdx/: BUILD
test_bin/: BUILD
